--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
 
     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
+          <i class="ion-arrow-left-c"></i> Back
       </ion-nav-back-button>
     </ion-nav-bar>
     <!--
