--- a/www/index.html
+++ b/www/index.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <title></title>
 
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+  <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 
-    <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="lib/ionic/js/angular/angular-resource.min.js"></script>
+  <!-- ionic/angularjs js -->
+  <script src="lib/ionic/js/ionic.bundle.js"></script>
+  <script src="lib/ionic/js/angular/angular-resource.min.js"></script>
 
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+  <!-- cordova script (this will be a 404 during development) -->
+  <script src="cordova.js"></script>
 
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
+  <!-- your app's js -->
+  <script src="js/app.js"></script>
+  <script src="js/controllers.js"></script>
+  <script src="js/services.js"></script>
 </head>
 <body ng-app="directory">
 
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-          <i class="ion-arrow-left-c"></i> Back
-      </ion-nav-back-button>
-    </ion-nav-bar>
+
+  <ion-nav-bar class="bar-stable">
+  <ion-nav-back-button>
+  <a class="button icon-left ion-chevron-left button-clear button-dark">Back</a>
+</ion-nav-back-button>
+
+
+<ion-nav-buttons side="right"> 
+<button class="button button-positive button-clear no-animation">
+ MY
+</button>  
+</ion-nav-buttons>
+</ion-nav-bar> 
+
     <!--
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
@@ -34,6 +43,5 @@
     -->
     <ion-nav-view></ion-nav-view>
 
-</body>
-
-</html>
+  </body>
+  </html>
