--- a/www/index.html
+++ b/www/index.html
@@ -25,14 +25,15 @@
 
   <ion-nav-bar class="bar-stable">
     <ion-nav-back-button>
-      <a class="button icon-left ion-chevron-left button-clear button-dark">Back</a>
+      <a class="button icon-left button-clear">Back</a>
     </ion-nav-back-button>
 
 
     <ion-nav-buttons side="right">
-      <button class="button button-positive button-clear no-animation">
+      <a href="#/login">
+      <button class="button button-positive button-clear no-animation" >
         MY
-      </button>
+      </button></a>
     </ion-nav-buttons>
   </ion-nav-bar>
 
